# crewai_mcp_adapter

./: .gitignore  .replit  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
attached_assets/: Pasted--Due-to-technical-issues-the-search-service-is-temporarily-unavailable-To-resolve-the-issues-le-1740338358232.txt  Pasted--LangChain-MCP-Adapters-This-library-provides-a-lightweight-wrapper-that-makes-Anthropic-Model-Co-1740337496887.txt  Pasted-You-re-absolutely-correct-to-notice-this-discrepancy-Let-s-fix-the-implementation-with-proper-CrewA-1740335528923.txt  Pasted-from-contextlib-import-AsyncExitStack-from-types-import-TracebackType-from-typing-import-cast-Liter-1740334282458.txt  Pasted-from-typing-import-Any-from-mcp-types-import-Tool-as-MCPTool-CallToolResult-TextCon-1740334262432.txt
crewai_adapters/: __init__.py  client.py  context_protocol.py  tools.py  types.py  utils.py
docs/: api_reference.md  examples.md  index.md
examples/: math_example.py  math_server.py
tests/: __init__.py  fixtures.py  test_base.py  test_basic_adapter.py  test_mcp_adapter.py
