[project]
name = "crewai-adapters"
version = "0.1.0"
description = "Native adapter support for CrewAI"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.1.0",
    "langchain-core>=0.3.37",
    "mcp>=1.3.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "twilio>=9.4.6",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as asyncio coroutines",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
