[project]
name = "crewai-adapters"
version = "0.1.0"
description = "Native adapter support for CrewAI with Model Context Protocol (MCP) integration"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shivendra Kumar", email = "dshivendra88@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "crewai>=0.1.0",
    "pydantic>=2.0.0",
    "mcp>=1.3.0",
    "pydantic-core>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as asyncio coroutines",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"